@@ -11,6 +11,7 @@ S3method(fortify,multiPhylo)
 S3method(fortify,paml_rst)
 S3method(fortify,phylo)
 S3method(fortify,phylo4)
+S3method(fortify,r8s)
 S3method(fortify,raxml)
 export("%<%")
 export("%<+%")
