@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/r8s.R
 \docType{methods}
 \name{get.fields}
 \alias{get.fields}
@@ -9,6 +9,7 @@
 \alias{get.fields,hyphy-method}
 \alias{get.fields,jplace,ANY-method}
 \alias{get.fields,paml_rst-method}
+\alias{get.fields,r8s-method}
 \alias{get.fields,raxml-method}
 \title{get.fields method}
 \usage{
@@ -27,6 +28,8 @@ get.fields(object, ...)
 get.fields(object, ...)
 
 \S4method{get.fields}{paml_rst}(object)
+
+\S4method{get.fields}{r8s}(object, ...)
 }
 \arguments{
 \item{object}{one of \code{jplace}, \code{beast}, \code{hyphy}, \code{codeml}, \code{codeml_mlc}, \code{paml_rst} object}
