@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R, R/r8s.R
 \docType{methods}
 \name{get.tree}
 \alias{get.tree}
@@ -10,6 +10,7 @@
 \alias{get.tree,jplace-method}
 \alias{get.tree,paml_rst-method}
 \alias{get.tree,phylo-method}
+\alias{get.tree,r8s-method}
 \alias{get.tree,raxml-method}
 \title{get.tree method}
 \usage{
@@ -30,6 +31,8 @@ get.tree(object, ...)
 \S4method{get.tree}{paml_rst}(object)
 
 \S4method{get.tree}{phylo}(object, ...)
+
+\S4method{get.tree}{r8s}(object, ...)
 }
 \arguments{
 \item{object}{one of \code{phylo}, \code{jplace}, \code{beast}, \code{hyphy}, \code{codeml}, \code{codeml_mlc}, \code{paml_rst} object}
