@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/ggtree.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/ggtree.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R, R/r8s.R
 \docType{methods}
 \name{groupOTU}
 \alias{groupOTU}
@@ -12,10 +12,11 @@
 \alias{groupOTU,jplace-method}
 \alias{groupOTU,paml_rst-method}
 \alias{groupOTU,phylo-method}
+\alias{groupOTU,r8s-method}
 \alias{groupOTU,raxml-method}
 \title{groupOTU method}
 \usage{
-groupOTU(object, focus, group_name = "group")
+groupOTU(object, focus, group_name = "group", ...)
 
 \S4method{groupOTU}{raxml}(object, focus, group_name = "group")
 
@@ -27,7 +28,7 @@ groupOTU(object, focus, group_name = "group")
 
 \S4method{groupOTU}{ggplot}(object, focus, group_name = "group")
 
-\S4method{groupOTU}{gg}(object, focus, group_name = "group")
+\S4method{groupOTU}{gg}(object, focus, group_name)
 
 \S4method{groupOTU}{hyphy}(object, focus, group_name = "group")
 
@@ -36,6 +37,9 @@ groupOTU(object, focus, group_name = "group")
 \S4method{groupOTU}{paml_rst}(object, focus, group_name = "group")
 
 \S4method{groupOTU}{phylo}(object, focus, group_name = "group")
+
+\S4method{groupOTU}{r8s}(object, focus, group_name = "group", tree = "TREE",
+  ...)
 }
 \arguments{
 \item{object}{supported objects, including phylo, paml_rst,
@@ -44,6 +48,8 @@ codeml_mlc, codeml, jplace, beast, hyphy}
 \item{focus}{a vector of tip (label or number) or a list of tips.}
 
 \item{group_name}{name of the group, 'group' by default}
+
+\item{...}{additional parameter}
 }
 \value{
 group index
