@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/paml_rst.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/paml_rst.R, R/r8s.R
 \docType{methods}
 \name{plot}
 \alias{plot}
@@ -8,6 +8,7 @@
 \alias{plot,codeml_mlc,ANY-method}
 \alias{plot,hyphy,ANY-method}
 \alias{plot,paml_rst,ANY-method}
+\alias{plot,r8s,ANY-method}
 \alias{plot,raxml,ANY-method}
 \title{plot method}
 \usage{
@@ -44,6 +45,9 @@
   show.tip.label = TRUE, tip.label.size = 4, tip.label.hjust = -0.1,
   position = "branch", annotation = "marginal_subs",
   annotation.color = "black", annotation.size = 3, ...)
+
+\S4method{plot}{r8s,ANY}(x, layout = "rectangular", branch.length = "TREE",
+  show.tip.label = TRUE, tip.label.size = 4, tip.label.hjust = 0, ...)
 }
 \arguments{
 \item{x}{object}
