@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/phylo.R, R/r8s.R
 \docType{methods}
 \name{scale_color}
 \alias{scale_color}
@@ -10,6 +10,7 @@
 \alias{scale_color,jplace-method}
 \alias{scale_color,paml_rst-method}
 \alias{scale_color,phylo-method}
+\alias{scale_color,r8s-method}
 \alias{scale_color,raxml-method}
 \title{scale_color method}
 \usage{
@@ -30,6 +31,8 @@ scale_color(object, by, ...)
 \S4method{scale_color}{paml_rst}(object, by, ...)
 
 \S4method{scale_color}{phylo}(object, by, ...)
+
+\S4method{scale_color}{r8s}(object, by = "bootstrap", tree = "TREE", ...)
 }
 \arguments{
 \item{object}{supported objects, including phylo, paml_rst,
