@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R
+% Please edit documentation in R/RAxML.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/r8s.R
 \docType{methods}
 \name{show,raxml-method}
 \alias{show}
@@ -8,6 +8,7 @@
 \alias{show,codeml_mlc-method}
 \alias{show,hyphy-method}
 \alias{show,paml_rst-method}
+\alias{show,r8s-method}
 \alias{show,raxml-method}
 \title{show method}
 \usage{
@@ -24,6 +25,8 @@
 show(object)
 
 \S4method{show}{paml_rst}(object)
+
+\S4method{show}{r8s}(object)
 }
 \arguments{
 \item{object}{one of \code{jplace}, \code{beast} object}
